// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createFsRouteTree > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "dynamic": {
          "children": {
            "[id]": {
              "children": {
                "[nested]": {
                  "value": {
                    "page": "/dynamic/[id]/[nested]/page.tsx",
                  },
                },
              },
              "value": {
                "layout": "/dynamic/[id]/layout.tsx",
                "page": "/dynamic/[id]/page.tsx",
              },
            },
            "catchall": {
              "children": {
                "[...any]": {
                  "value": {
                    "page": "/dynamic/catchall/[...any]/page.tsx",
                  },
                },
                "static": {
                  "value": {
                    "page": "/dynamic/catchall/static/page.tsx",
                  },
                },
              },
              "value": {
                "page": "/dynamic/catchall/page.tsx",
              },
            },
            "static": {
              "value": {
                "page": "/dynamic/static/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/dynamic/layout.tsx",
            "page": "/dynamic/page.tsx",
          },
        },
        "other": {
          "value": {
            "page": "/other/page.tsx",
          },
        },
        "test": {
          "children": {
            "other": {
              "value": {
                "page": "/test/other/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/test/layout.tsx",
            "page": "/test/page.tsx",
          },
        },
      },
      "value": {
        "layout": "/layout.tsx",
        "not-found": "/not-found.js",
        "page": "/page.tsx",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 2`] = `
{
  "__pathname": "/",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/:page",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 3`] = `
{
  "__pathname": "/other",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/other:layout",
      "node": true,
      "path": "/other",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "other",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/other:page",
      "node": true,
      "path": "/other",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "other",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 4`] = `
{
  "__pathname": "/not-found",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/not-found:not-found",
      "node": true,
      "path": "/not-found",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "not-found",
          "value": "not-found",
        },
      ],
      "type": "not-found",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 5`] = `
{
  "__pathname": "/test",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/test:layout",
      "node": true,
      "path": "/test",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "test",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/test:page",
      "node": true,
      "path": "/test",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "test",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 6`] = `
{
  "__pathname": "/test/other",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/test:layout",
      "node": true,
      "path": "/test",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "test",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/test/other:layout",
      "node": true,
      "path": "/test/other",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "test",
        },
        {
          "type": "static",
          "value": "other",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/test/other:page",
      "node": true,
      "path": "/test/other",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "test",
        },
        {
          "type": "static",
          "value": "other",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 7`] = `
{
  "__pathname": "/test/not-found",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/test/not-found:not-found",
      "node": true,
      "path": "/test/not-found",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "not-found",
          "value": "test/not-found",
        },
      ],
      "type": "not-found",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 8`] = `
{
  "__pathname": "/dynamic",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:page",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 9`] = `
{
  "__pathname": "/dynamic/static",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/static:layout",
      "node": true,
      "path": "/dynamic/static",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "static",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/static:page",
      "node": true,
      "path": "/dynamic/static",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "static",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 10`] = `
{
  "__pathname": "/dynamic/abc",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/abc:layout",
      "node": true,
      "path": "/dynamic/abc",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "key": "id",
          "type": "dynamic",
          "value": "abc",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/abc:page",
      "node": true,
      "path": "/dynamic/abc",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "key": "id",
          "type": "dynamic",
          "value": "abc",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 11`] = `
{
  "__pathname": "/dynamic/abc/def",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/abc:layout",
      "node": true,
      "path": "/dynamic/abc",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "key": "id",
          "type": "dynamic",
          "value": "abc",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/abc/def:layout",
      "node": true,
      "path": "/dynamic/abc/def",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "key": "id",
          "type": "dynamic",
          "value": "abc",
        },
        {
          "key": "nested",
          "type": "dynamic",
          "value": "def",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/abc/def:page",
      "node": true,
      "path": "/dynamic/abc/def",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "key": "id",
          "type": "dynamic",
          "value": "abc",
        },
        {
          "key": "nested",
          "type": "dynamic",
          "value": "def",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 12`] = `
{
  "__pathname": "/dynamic/%E2%9C%85",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/✅:layout",
      "node": true,
      "path": "/dynamic/✅",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "key": "id",
          "type": "dynamic",
          "value": "✅",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/✅:page",
      "node": true,
      "path": "/dynamic/✅",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "key": "id",
          "type": "dynamic",
          "value": "✅",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 13`] = `
{
  "__pathname": "/dynamic/catchall",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall:layout",
      "node": true,
      "path": "/dynamic/catchall",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall:page",
      "node": true,
      "path": "/dynamic/catchall",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 14`] = `
{
  "__pathname": "/dynamic/catchall/static",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall:layout",
      "node": true,
      "path": "/dynamic/catchall",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall/static:layout",
      "node": true,
      "path": "/dynamic/catchall/static",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
        {
          "type": "static",
          "value": "static",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall/static:page",
      "node": true,
      "path": "/dynamic/catchall/static",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
        {
          "type": "static",
          "value": "static",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 15`] = `
{
  "__pathname": "/dynamic/catchall/x",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall:layout",
      "node": true,
      "path": "/dynamic/catchall",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall/x:layout",
      "node": true,
      "path": "/dynamic/catchall/x",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
        {
          "key": "any",
          "type": "catchall",
          "value": "x",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall/x:page",
      "node": true,
      "path": "/dynamic/catchall/x",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
        {
          "key": "any",
          "type": "catchall",
          "value": "x",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 16`] = `
{
  "__pathname": "/dynamic/catchall/x/y",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall:layout",
      "node": true,
      "path": "/dynamic/catchall",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall/x/y:layout",
      "node": true,
      "path": "/dynamic/catchall/x/y",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
        {
          "key": "any",
          "type": "catchall",
          "value": "x/y",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall/x/y:page",
      "node": true,
      "path": "/dynamic/catchall/x/y",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
        {
          "key": "any",
          "type": "catchall",
          "value": "x/y",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`createFsRouteTree > basic 17`] = `
{
  "__pathname": "/dynamic/catchall/x/y/z",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "path": "/dynamic",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall:layout",
      "node": true,
      "path": "/dynamic/catchall",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall/x/y/z:layout",
      "node": true,
      "path": "/dynamic/catchall/x/y/z",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
        {
          "key": "any",
          "type": "catchall",
          "value": "x/y/z",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/dynamic/catchall/x/y/z:page",
      "node": true,
      "path": "/dynamic/catchall/x/y/z",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "dynamic",
        },
        {
          "type": "static",
          "value": "catchall",
        },
        {
          "key": "any",
          "type": "catchall",
          "value": "x/y/z",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`matchRouteTree > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "a": {
          "value": {
            "page": "/a/page.js",
          },
        },
      },
      "value": {
        "page": "/page.js",
      },
    },
  },
}
`;

exports[`matchRouteTree > basic 2`] = `
{
  "_pathname": "/",
  "matches": [
    {
      "node": true,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": true,
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree > basic 3`] = `
{
  "_pathname": "/a",
  "matches": [
    {
      "node": true,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": true,
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": true,
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree > basic 4`] = `
{
  "_pathname": "/b",
  "matches": undefined,
}
`;

exports[`matchRouteTree > dynamic not-found 1`] = `
{
  "children": {
    "": {
      "children": {
        "[x]": {
          "children": {
            "b": {
              "children": {
                "d": {
                  "value": {
                    "page": "/[x]/b/d/page.js",
                  },
                },
              },
            },
          },
          "value": {
            "not-found": "/[x]/not-found.js",
          },
        },
        "a": {
          "children": {
            "b": {
              "children": {
                "c": {
                  "value": {
                    "page": "/a/b/c/page.js",
                  },
                },
              },
            },
          },
          "value": {
            "not-found": "/a/not-found.js",
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree > dynamic not-found 2`] = `
{
  "_pathname": "/a/b/c",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "b",
      },
    },
    {
      "node": {
        "page": "/a/b/c/page.js",
      },
      "segment": {
        "type": "static",
        "value": "c",
      },
    },
    {
      "node": {
        "page": "/a/b/c/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree > dynamic not-found 3`] = `
{
  "_pathname": "/a/b/d",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "b/d",
      },
    },
  ],
}
`;

exports[`matchRouteTree > dynamic not-found 4`] = `
{
  "_pathname": "/x/b/e",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/[x]/not-found.js",
      },
      "segment": {
        "key": "x",
        "type": "dynamic",
        "value": "x",
      },
    },
    {
      "node": {
        "not-found": "/[x]/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "b/e",
      },
    },
  ],
}
`;

exports[`matchRouteTree > group routes basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "(x)": {
          "children": {
            "b": {
              "value": {
                "page": "/(x)/b/page.js",
              },
            },
            "d": {
              "children": {
                "(y)": {
                  "value": {
                    "page": "/(x)/d/(y)/page.js",
                  },
                },
              },
            },
          },
        },
        "a": {
          "value": {
            "page": "/a/page.js",
          },
        },
        "c": {
          "children": {
            "(x)": {
              "value": {
                "page": "/c/(x)/page.js",
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree > group routes basic 2`] = `
{
  "_pathname": "/a",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "page": "/a/page.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "page": "/a/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree > group routes basic 3`] = `
{
  "_pathname": "/b",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "group",
        "value": "(x)",
      },
    },
    {
      "node": {
        "page": "/(x)/b/page.js",
      },
      "segment": {
        "type": "static",
        "value": "b",
      },
    },
    {
      "node": {
        "page": "/(x)/b/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree > group routes basic 4`] = `
{
  "_pathname": "/c",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "c",
      },
    },
    {
      "node": {
        "page": "/c/(x)/page.js",
      },
      "segment": {
        "type": "group",
        "value": "(x)",
      },
    },
    {
      "node": {
        "page": "/c/(x)/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree > group routes basic 5`] = `
{
  "_pathname": "/d",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "group",
        "value": "(x)",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "d",
      },
    },
    {
      "node": {
        "page": "/(x)/d/(y)/page.js",
      },
      "segment": {
        "type": "group",
        "value": "(y)",
      },
    },
    {
      "node": {
        "page": "/(x)/d/(y)/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree > group routes not-found 1`] = `
{
  "children": {
    "": {
      "children": {
        "(x)": {
          "children": {
            "a": {
              "children": {
                "c": {
                  "value": {
                    "not-found": "/(x)/a/c/not-found.js",
                    "page": "/(x)/a/c/page.js",
                  },
                },
              },
              "value": {
                "not-found": "/(x)/a/not-found.js",
              },
            },
            "p": {
              "children": {
                "q": {
                  "value": {
                    "page": "/(x)/p/q/page.js",
                  },
                },
              },
              "value": {
                "not-found": "/(x)/p/not-found.js",
              },
            },
          },
        },
        "a": {
          "children": {
            "b": {
              "value": {
                "page": "/a/b/page.js",
              },
            },
          },
          "value": {
            "not-found": "/a/not-found.js",
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree > group routes not-found 2`] = `
{
  "_pathname": "/a/u",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "u",
      },
    },
  ],
}
`;

exports[`matchRouteTree > group routes not-found 3`] = `
{
  "_pathname": "/a/c/u",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "c/u",
      },
    },
  ],
}
`;

exports[`matchRouteTree > group routes not-found 4`] = `
{
  "_pathname": "/p/u",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "group",
        "value": "(x)",
      },
    },
    {
      "node": {
        "not-found": "/(x)/p/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "p",
      },
    },
    {
      "node": {
        "not-found": "/(x)/p/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "u",
      },
    },
  ],
}
`;

exports[`matchRouteTree > matchPageRoute > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "a": {
          "children": {
            "b": {
              "value": {
                "page": "/a/b/page.js",
              },
            },
          },
          "value": {
            "not-found": "/a/not-found.js",
            "page": "/a/page.js",
          },
        },
      },
      "value": {
        "page": "/page.js",
      },
    },
  },
}
`;

exports[`matchRouteTree > matchPageRoute > basic 2`] = `
{
  "_pathname": "/",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/:page",
      "node": "_",
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`matchRouteTree > matchPageRoute > basic 3`] = `
{
  "_pathname": "/a",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/a:layout",
      "node": "_",
      "path": "/a",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/a:page",
      "node": "_",
      "path": "/a",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`matchRouteTree > matchPageRoute > basic 4`] = `
{
  "_pathname": "/a/b",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/a:layout",
      "node": "_",
      "path": "/a",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/a/b:layout",
      "node": "_",
      "path": "/a/b",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
        {
          "type": "static",
          "value": "b",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/a/b:page",
      "node": "_",
      "path": "/a/b",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
        {
          "type": "static",
          "value": "b",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`matchRouteTree > matchPageRoute > basic 5`] = `
{
  "_pathname": "/a/b/c",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/a:layout",
      "node": "_",
      "path": "/a",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/a/b/c:not-found",
      "node": "_",
      "path": "/a/b/c",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
        {
          "type": "not-found",
          "value": "b/c",
        },
      ],
      "type": "not-found",
    },
  ],
}
`;

exports[`matchRouteTree > matchPageRoute > group routes 1`] = `
{
  "children": {
    "": {
      "children": {
        "(x)": {
          "children": {
            "b": {
              "value": {
                "page": "/(x)/b/page.js",
              },
            },
          },
        },
        "(y)": {
          "children": {
            "d": {
              "children": {
                "(z)": {
                  "value": {
                    "page": "/(y)/d/(z)/page.js",
                  },
                },
              },
            },
          },
        },
        "a": {
          "value": {
            "page": "/a/page.js",
          },
        },
        "c": {
          "children": {
            "(x)": {
              "value": {
                "page": "/c/(x)/page.js",
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree > matchPageRoute > group routes 2`] = `
{
  "_pathname": "/a",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/a:layout",
      "node": "_",
      "path": "/a",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/a:page",
      "node": "_",
      "path": "/a",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "a",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`matchRouteTree > matchPageRoute > group routes 3`] = `
{
  "_pathname": "/b",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/(x):layout",
      "node": "_",
      "path": "/(x)",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "group",
          "value": "(x)",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/(x)/b:layout",
      "node": "_",
      "path": "/(x)/b",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "group",
          "value": "(x)",
        },
        {
          "type": "static",
          "value": "b",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/(x)/b:page",
      "node": "_",
      "path": "/(x)/b",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "group",
          "value": "(x)",
        },
        {
          "type": "static",
          "value": "b",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`matchRouteTree > matchPageRoute > group routes 4`] = `
{
  "_pathname": "/c",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/c:layout",
      "node": "_",
      "path": "/c",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "c",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/c/(x):layout",
      "node": "_",
      "path": "/c/(x)",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "c",
        },
        {
          "type": "group",
          "value": "(x)",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/c/(x):page",
      "node": "_",
      "path": "/c/(x)",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "static",
          "value": "c",
        },
        {
          "type": "group",
          "value": "(x)",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;

exports[`matchRouteTree > matchPageRoute > group routes 5`] = `
{
  "_pathname": "/d",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "path": "/",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/(y):layout",
      "node": "_",
      "path": "/(y)",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "group",
          "value": "(y)",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/(y)/d:layout",
      "node": "_",
      "path": "/(y)/d",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "group",
          "value": "(y)",
        },
        {
          "type": "static",
          "value": "d",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/(y)/d/(z):layout",
      "node": "_",
      "path": "/(y)/d/(z)",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "group",
          "value": "(y)",
        },
        {
          "type": "static",
          "value": "d",
        },
        {
          "type": "group",
          "value": "(z)",
        },
      ],
      "type": "layout",
    },
    {
      "id": "/(y)/d/(z):page",
      "node": "_",
      "path": "/(y)/d/(z)",
      "segments": [
        {
          "type": "static",
          "value": "",
        },
        {
          "type": "group",
          "value": "(y)",
        },
        {
          "type": "static",
          "value": "d",
        },
        {
          "type": "group",
          "value": "(z)",
        },
        {
          "type": "page",
        },
      ],
      "type": "page",
    },
  ],
}
`;
